# Puzzly

./: main.py  pyproject.toml
notebooks/: dataset.ipynb
