[project]
name = "puzzly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "opencv-python>=5.0.0.93",
    "pillow>=12.3.0",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
]
